--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,4 +1,4 @@
-<nav class='navbar navbar-expand-lg navbar-light bg-light'>
+<nav class='navbar navbar-expand-lg navbar-light'>
     <a class='navbar-brand logo' href='#'>
         <i class='fa-solid fa-code'></i>
         <span>CodeLearn</span>
