--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,8 +1,12 @@
+// Header
 .header {
     position: sticky;
     top: 0;
     left: 0;
+    font-size: 1.6rem;
     width: 100%;
+    padding: 0 20px;
+    background-color: #fff;
     box-shadow: 0px 5px 21px -5px #cdd1e1;
     z-index: 100;
 }
@@ -12,9 +16,21 @@
 }
 
 .nav-item {
+    font-size: 1.6rem;
+
+    .nav-link {
+        i {
+            font-size: 2.4rem;
+        }
+    }
+
     .nav-link::after {
         display: none;
     }
+}
+
+.logo {
+    font-size: 1.6rem;
 }
 
 .avatar {
