--- a/src/sass/layouts/_sidebar.scss
+++ b/src/sass/layouts/_sidebar.scss
@@ -1,5 +1,7 @@
+// SideBar
 .sidebar {
     flex-shrink: 0;
+    margin-top: 16px;
 }
 
 .collapse.show {
@@ -12,9 +14,9 @@
 .sidebar > .nav {
     position: sticky;
     flex-direction: column;
-    top: 96px;
+    top: 74px;
     left: 0;
-    width: 270px;
+    width: 250px;
     padding: 0 0 0 16px;
     background: #fff;
     overflow-y: hidden;
@@ -24,7 +26,7 @@
     z-index: 10;
 
     div {
-        width: 240px;
+        width: 220px;
     }
 
     &:hover,
@@ -77,6 +79,15 @@
         top: 50%;
         right: 16px;
         transform: translateY(-50%);
+        font-size: 1.6rem;
+    }
+
+    .icon {
+        width: 24px;
+        height: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     &:hover {
@@ -86,5 +97,5 @@
 }
 
 .icon {
-    margin-right: 10px;
+    margin-right: 6px;
 }
