--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -10,9 +10,8 @@
             crossorigin='anonymous'
         />
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css' />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css">
-        <link rel='stylesheet' href='static/css/base.css' />
-        <link rel='stylesheet' href='static/css/style.css' />
+        <link rel='stylesheet' href='/css/base.css' />
+        <link rel='stylesheet' href='/css/style.css' />
     </head>
     <body>
         <div class='app'>
@@ -26,6 +25,9 @@
                 </div>
             </div>
         </div>
+        <script src="/js/main.js"></script>
+   
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
         <script
             src='https://code.jquery.com/jquery-3.2.1.slim.min.js'
             integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN'
