--- a/src/views/pages/dashboard.hbs
+++ b/src/views/pages/dashboard.hbs
@@ -48,9 +48,9 @@
                                     <i class='icon-sun mr-2'></i>31<sup>C</sup>
                                 </h2>
                             </div>
-                            <div class='ml-2'>
-                                <h4 class='location font-weight-normal'>Bangalore</h4>
-                                <h6 class='font-weight-normal'>India</h6>
+                            <div class='ml-3'>
+                                <h4 class='location font-weight-normal'>Hưng Yên</h4>
+                                <h6 class='font-weight-normal'>Việt Nam</h6>
                             </div>
                         </div>
                     </div>
