--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -67,7 +67,7 @@
                 </a>
             </div>
         </li>
-        <li class='nav-item nav-profile dropdown'>
+        <li class='nav-item nav-profile dropdown ml-3'>
             <a
                 class='nav-link dropdown-toggle'
                 href='#'
