--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -27,6 +27,7 @@
         </div>
         <script src="/js/main.js"></script>
    
+        {{!-- <script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script> --}}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js"></script>
         <script
             src='https://code.jquery.com/jquery-3.2.1.slim.min.js'
@@ -43,5 +44,6 @@
             integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl'
             crossorigin='anonymous'
         ></script>
+       
     </body>
 </html>
