--- a/src/views/pages/course/show.hbs
+++ b/src/views/pages/course/show.hbs
@@ -3,14 +3,13 @@
         <div class='col-md-12 grid-margin'>
             <div class='row'>
                 <div class='col-12 col-xl-8 mb-4 mb-xl-0'>
-                    <h3 class='font-weight-bold title'>Quản lý khóa học</h3>
+                    <h3 class='font-weight-bold title'>Course</h3>
                 </div>
 
             </div>
         </div>
     </div>
     <div class='row'>
-
         <div class='col-md-12 grid-margin stretch-card'>
             <div class='card'>
                 <div class='card-body'>
@@ -26,9 +25,9 @@
                     </div>
                     <div class='row'>
                         <div class='col-12'>
-                            {{#if message}}
+                            {{#if error}}
                                 <div class='alert alert-danger' role='alert'>
-                                    {{message}}
+                                    {{error}}
                                 </div>
                             {{/if}}
                             <div class='table-responsive'>
@@ -36,31 +35,31 @@
                                     <thead>
                                         <tr>
                                             <th>Quote#</th>
-                                            <th>Username</th>
-                                            <th>Email</th>
-                                            <th>First Name</th>
-                                            <th>Last Name</th>
-                                            <th>Full Name</th>
-                                            <th>Role</th>
+                                            <th>Title</th>
+                                            <th>Description</th>
+                                            <th>Image</th>
+                                            <th>Price</th>
+                                            <th>Category name</th>
+                                            <th>Created at</th>
                                             <th>Actions</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {{#each users}}
+                                        {{#each courses}}
                                             <tr>
                                                 <td>
                                                     <input value='{{this.id}}' type='checkbox' name='id' id='id' />
                                                     {{this.id}}
                                                 </td>
-                                                <td>{{this.username}}</td>
-                                                <td>{{this.email}}</td>
-                                                <td>{{this.firstName}}</td>
-                                                <td>{{this.lastName}}</td>
-                                                <td>{{this.fullName}}</td>
-                                                <td>{{this.role}}</td>
+                                                <td>{{this.title}}</td>
+                                                <td>{{this.description}}</td>
+                                                <td>{{this.image}}</td>
+                                                <td>{{this.price}}</td>
+                                                <td>{{'category.title'}}</td>
+                                                <td>{{formatDate this.createdAt}}</td>
                                                 <td class='details-control'>
                                                     <a
-                                                        href='/user/{{this.id}}/edit'
+                                                        href='/courses/{{this.id}}/edit'
                                                         id='btn-edit'
                                                         class='btn btn-primary'
                                                     >Edit</a>
@@ -100,74 +99,59 @@
     <div class='modal-dialog' role='document'>
         <div class='modal-content'>
             <div class='modal-header'>
-                <h5 class='modal-title' id='exampleModalLabel'>Create new user</h5>
+                <h5 class='modal-title' id='exampleModalLabel'>Create new course</h5>
                 <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
                     <span aria-hidden='true'>&times;</span>
                 </button>
             </div>
             <div class='modal-body'>
 
-                <form name='form-user' action='/user' method='POST'>
+                <form name='form' action='{{route}}' method='POST'>
+
                     <div class='form-group'>
-                        <label for='username'>Username:</label>
+                        <label for='title'>Title:</label>
+                        <input type='text' name='title' class='form-control' id='title' placeholder='Enter title' />
+                    </div>
+                    <div class='form-group'>
+                        <label for='description'>description:</label>
                         <input
                             type='text'
-                            name='username'
+                            name='description'
                             class='form-control'
-                            id='username'
-                            placeholder='Enter username'
+                            id='description'
+                            placeholder='Enter description'
                         />
                     </div>
                     <div class='form-group'>
-                        <label for='email'>Email address:</label>
-                        <input type='email' name='email' class='form-control' id='email' placeholder='Enter email' />
+                        <label for='image'>image:</label>
+                        <input type='text' name='image' class='form-control' id='image' placeholder='Enter image' />
                     </div>
                     <div class='form-group'>
-                        <label for='password'>Password:</label>
-                        <input
-                            type='password'
-                            name='password'
-                            class='form-control'
-                            id='password'
-                            placeholder='Enter password'
-                        />
+                        <label for='price'>price:</label>
+                        <input type='text' name='price' class='form-control' id='price' placeholder='Enter price' />
                     </div>
                     <div class='form-group'>
-                        <label for='firstName'>First Name:</label>
-                        <input
+                        <label for='content'>Content:</label>
+                        <textarea
                             type='text'
-                            name='firstName'
+                            name='content'
                             class='form-control'
-                            id='firstName'
-                            placeholder='Enter first name'
-                        />
+                            id='content'
+                            placeholder='Enter content'
+                        ></textarea>
                     </div>
                     <div class='form-group'>
-                        <label for='lastName'>Last Name:</label>
-                        <input
-                            type='text'
-                            name='lastName'
-                            class='form-control'
-                            id='lastName'
-                            placeholder='Enter last name'
-                        />
+                        <label for='video'>Video:</label>
+                        <input type='text' name='video' class='form-control' id='video' placeholder='Enter video' />
                     </div>
+
                     <div class='form-group'>
-                        <label for='fullName'>Full Name:</label>
-                        <input
-                            type='text'
-                            name='fullName'
-                            class='form-control'
-                            id='fullName'
-                            placeholder='Enter full name'
-                        />
-                    </div>
-                    <div class='form-group'>
-                        <label for='role'>Role:</label>
-                        <select name='role' class='form-control' id='role'>
-                            <option selected disabled>-- Chọn vai trò --</option>
-                            <option value='user'>Người dùng</option>
-                            <option value='admin'>Quản trị</option>
+                        <label for='categoryId'>category:</label>
+                        <select name='categoryId' class='form-control' id='categoryId'>
+                            <option selected disabled>-- Chọn thể loại --</option>
+                            {{#each categories}}
+                                <option value='{{this.id}}'>{{this.title}}</option>
+                            {{/each}}
                         </select>
                     </div>
 
@@ -193,7 +177,7 @@
     <div class='modal-dialog' role='document'>
         <div class='modal-content'>
             <div class='modal-header'>
-                <h5 class='modal-title' id='exampleModalLabel'>Delete user</h5>
+                <h5 class='modal-title' id='exampleModalLabel'>Delete courses</h5>
                 <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
                     <span aria-hidden='true'>&times;</span>
                 </button>
@@ -209,6 +193,9 @@
     </div>
 </div>
 
-<form name='form-delete' action='/user' method='POST'></form>
+<form name='form-delete' action='{{route}}' method='POST'></form>
 
-<script src='/js/user.js'></script>
+<script src='/js/main.js'></script>
+<script>
+    const message = '{{{message}}}'; if(message) alert(message);
+</script>
