--- a/src/views/pages/user/edit.hbs
+++ b/src/views/pages/user/edit.hbs
@@ -3,7 +3,7 @@
         <div class='col-md-12 grid-margin'>
             <div class='row'>
                 <div class='col-12 col-xl-8 mb-4 mb-xl-0'>
-                    <h3 class='font-weight-bold title'>Quản lý Người Dùng</h3>
+                    <h3 class='font-weight-bold title'>User</h3>
                 </div>
 
             </div>
@@ -13,9 +13,14 @@
         <div class='col-6 grid-margin stretch-card'>
             <div class='card'>
                 <div class='card-body'>
-                    <h4 class='card-title'>Sửa người dùng</h4>
+                    <h4 class='card-title'>Edit user</h4>
+                    {{#if error}}
+                        <div class='alert alert-danger' role='alert'>
+                            {{error}}
+                        </div>
+                    {{/if}}
 
-                    <form action='/user/{{user.id}}?_method=patch' class='forms-sample' method='POST'>
+                    <form action='/users/{{user.id}}?_method=patch' class='forms-sample' method='POST'>
                         <div class='form-group'>
                             <label for='exampleInputUsername1'>Username</label>
                             <input
@@ -39,33 +44,29 @@
                             />
                         </div>
                         <div class='form-group'>
-                            <label for='exampleInputEmail1'>First Name:</label>
+                            <label for='fullName'>Full Name:</label>
                             <input
-                                value='{{user.firstName}}'
-                                name='firstName'
+                                value='{{user.fullName}}'
                                 type='text'
+                                name='fullName'
                                 class='form-control'
-                                id='exampleInputEmail1'
-                                placeholder='firstName'
+                                id='fullName'
+                                placeholder='Enter full name'
                             />
                         </div>
-                        <div class='form-group'>
-                            <label for='exampleInputEmail1'>Last Name: </label>
-                            <input
-                                value='{{user.lastName}}'
-                                name='lastName'
-                                type='text'
-                                class='form-control'
-                                id='exampleInputEmail1'
-                                placeholder='lastName'
-                            />
-                        </div>
+
                         <div class='form-group'>
                             <label for='exampleInputPassword1'>role:</label>
                             <select name='role' class='custom-select custom-select-sm form-control form-control-sm'>
-                                <option selected disabled>-- Chọn role --</option>
-                                <option value='user'>user</option>
-                                <option value='admin'>admin</option>
+                                <option disabled>-- select role --</option>
+                                {{#ifEquals user.role 'user'}}
+                                    <option value='user' selected>user</option>
+                                    <option value='admin'>admin</option>
+                                {{else}}
+                                    <option value='user'>user</option>
+                                    <option value='admin' selected>admin</option>
+                                {{/ifEquals}}
+
                             </select>
                         </div>
 
