--- a/src/views/partials/sidebar.hbs
+++ b/src/views/partials/sidebar.hbs
@@ -66,6 +66,12 @@
                     <span class='menu-title'>Course</span>
                 </a>
             </li>
+            <li class='nav-item'>
+                <a class='nav-link' href='/registers'>
+                    <span class='icon fa-regular fa-rectangle-list'></span>
+                    <span class='menu-title'>Register</span>
+                </a>
+            </li>
             {{! <li class='nav-item'>
                 <a
                     class='nav-link'
